Translate the rest of blip

--- a/i18next-parser.config.json
+++ b/i18next-parser.config.json
@@ -4,6 +4,7 @@
   "lexers": {
     "js": ["JavascriptLexer", "JsxLexer"]
   },
+  "reactNamespace": true,
   "sort": true,
   "locales": ["en", "fr"]
 }
